/*
 * $Id: ChangeLog,v 1.194 2002/05/02 13:44:36 map Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-05-02 20:30 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/vm/hvm.c
    * Fixed string sharing broken during last string optimizations

2002-05-02 15:30 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/vm/runner.c
    * Added missing newline at EOF

  * source/vm/hvm.c
    * Some string manipulation optimizations

2002-05-01 17:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbapi.h
     + Added declaration of hb_retcAdopt(), hb_retcStatic(), hb_retclenAdopt(), hb_retclenStatic()
     + Added #define HB_API_MACROS to force MACRO usage by default.

   * include/hbfast.h
     - Removed declaration of hb_retcAdopt(), hb_retcStatic(), hb_retclenAdopt(), hb_retclenStatic()

   * source/vm/extend.c
   * source/vm/fastitem.c
     + Added #undef directive preceding each of the functions that have a MACRO version.

2002-05-01 15:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbset.h
    ! Corrected declarations of CloseWinPrinter() and WinPrinterEject()

  * source/compiler/harbour.sly
  * source/macro/macro.y
    * Minor formating corretions, based on new warnings by Bison 1.35

2002-05-01 11:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp_harb.ch
    ! Many improvements in OLE inteface. It now supports parameters by reference.

2002-05-01 01:41 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbrddcdx.h
   * source/rdd/dbfcdx/dbfcdx1.c
   * source/rdd/dbfcdx/dbfcdx1.h
   * source/rdd/dbfcdx/dbfcdx2.h
     + multiple CDXs support for:
       hb_cdxOrderListAdd, hb_cdxOrderListFocus, hb_cdxGoCold,
       hb_cdxGoHot, hb_cdxGetTagByNumber, hb_cdxGetActiveTag,
       DBOI_ORDERCOUNT, DBOI_UNIQUE, ordName, ordBagName.
     ! fixed a bug in: gotop, gobbotom, skip